.ci/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabiane-data-api
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
    - name: glowroot
      targetPort: 4000
      port: 4000
  selector:
    app: sabiane-data-api
