.ci/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabiane-data-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
spec:
  tls:
    - hosts:
      - sabiane-data-api.dev.insee.io
      - glowroot-sabiane-data-api.dev.insee.io
  rules:
    - host: sabiane-data-api.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sabiane-data-api
              servicePort: http
    - host: glowroot-sabiane-data-api.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sabiane-data-glowroot
              servicePort: http
